# ICU-Deterioration-Prediction

./: .gitignore  App.jsx  README.md  ablation_study.py  advanced_evaluation.py  audit_leakage.py  bootstrap_metrics.py  bootstrap_metrics_fixed.py  calibration.py  calibration_plot.py  catboost_ensemble.py  catboost_tune.py  clean_outliers.py  clinical_comparison.py  clinical_scores.py  cohort_flow_diagram.py  complete_publication.py  complete_publication_summary.py  confusion_matrix_full.py  consistency_check.py  correlation_heatmap.py  cross_validation.py  decision_curve.py  decision_curve_fixed.py  delong_test.py  deploy.sh  enhance_features.py  ensemble_model.py  environment.yml  error_analysis.py  error_analysis_fixed.py  extract_temporal.py  feature_selection.py  final_consolidated_pipeline.py  final_cv.py  final_evaluation.py  final_publication.py  final_publication_package.py  final_results_table.py  generate_consistent_tables.py  (+35 more)
backend/: .dockerignore  Dockerfile  build.sh  pyproject.toml  render-build.sh  render.yaml  requirements-ml.txt  requirements.txt  setup.py
backend/app/: __init__.py  ablation_study.py  auth.py  config.py  database.py  evaluation.py  focal_loss.py  improved_model.py  main.py  ml_model.py  model_comparison.py  models.py  multi_output_model.py  oauth.py  schemas.py  shap_analyzer.py
backend/app/routes/: __init__.py  auth.py  dashboard.py  google.py  patients.py  predictions.py
backend/app/routes/admin/: __init__.py  analytics.py  logs.py  (+3 more)
backend/app/utils/: __init__.py  feature_engineering.py  preprocessing.py  validation.py
(+61 files in other folders)
