[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icu-predictor-backend"
version = "1.0.0"
description = "ICU Deterioration Prediction Backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pymongo==4.6.1",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "bcrypt==4.1.2",
    "passlib==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
]
